--- a/static/css/style.css
+++ b/static/css/style.css
@@ -130,18 +130,18 @@ body {
     padding: 15px;
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
-    gap: 8px; /* Consistent gap between all items */
+    gap: 8px; 
     overflow-y: auto;
     flex: 1;
-    align-content: start; /* This will force items to align to the top */
+    align-content: start; /
     justify-content: start;
 }
 
 .source-btn, .destination-btn {
     width: auto;
     min-width: 0;
-    height: 36px; /* Or whatever your standard button height is */
-    margin: 0; /* Remove any margin that might cause spacing */
+    height: 36px; 
+    margin: 0; /
 }
 
 /* Buttons */
@@ -171,7 +171,7 @@ body {
 
 .destination-btn {
     width: 120px;
-    height: 48px; /* Increased height to accommodate status */
+    height: 48px; 
     padding: 4px 8px;
     display: flex;
     flex-direction: column;
@@ -240,6 +240,7 @@ body {
     padding: 10px;
     cursor: pointer;
     min-height: 80px;
+    min-width: 210px;
 }
 
 .selection-label {
@@ -344,50 +345,6 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
     background: var(--text-secondary);
-}
-
-/* 
-Poke sprites
- */
-
-.poke-toggle {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    margin-right: 15px;
-}
-
-.poke-checkbox {
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
-}
-
-.poke-display {
-    background-color: var(--button-bg);
-    border: 1px solid var(--border-color);
-    border-radius: 4px;
-    padding: 10px;
-    height: 80px;
-    width: 80px; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px 0;
-}
-
-.poke-display.hidden {
-    display: none;
-}
-
-.selection-display, .take-button-container {
-    width: 100%;  
-}
-
-.poke-sprite {
-    max-height: 200%;
-    max-width: 200%;
-    object-fit: contain;
 }
 
 /* 
