--- a/static/css/style.css
+++ b/static/css/style.css
@@ -130,10 +130,10 @@ body {
     padding: 15px;
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
-    gap: 8px; 
+    gap: 8px;
     overflow-y: auto;
     flex: 1;
-    align-content: start; /
+    align-content: start;
     justify-content: start;
 }
 
@@ -141,7 +141,7 @@ body {
     width: auto;
     min-width: 0;
     height: 36px; 
-    margin: 0; /
+    margin: 0; 
 }
 
 /* Buttons */
@@ -359,6 +359,7 @@ Category buttons
     flex-direction: column;
     gap: 10px;
     max-width: 150px;
+    overflow-y: auto;
 }
 
 .category-btn {
@@ -386,4 +387,66 @@ Category buttons
     grid-template-columns: auto 1fr auto 1fr auto;
     gap: 20px;
     height: calc(100vh - 120px);
+}
+
+
+/* 
+Lock button
+ */
+
+
+.destination-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.lock-button.locked {
+    color: var(--accent-cyan);
+}
+
+.lock-button {
+    background-color: var(--button-bg);
+    color: var(--text-primary);
+    border: 2px solid var(--accent-red);
+    padding: 15px 40px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1.2em;
+    transition: all 0.2s ease;
+}
+
+.lock-button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.lock-button.active {
+    background-color: var(--accent-red);
+    color: var(--background-dark);
+}
+
+/* 
+Lock status message
+ */
+
+ .lock-message {
+    display: none;
+    background-color: #232836;
+    color: var(--accent-red);
+    padding: 10px;
+    text-align: center;
+    border: solid;
+    border-color: var(--accent-red);
+    border-radius: 4px;
+    margin-top: 10px;
+    font-weight: bold;
+    max-width: 260px;
+    position: absolute;
+    bottom: 30px;
+}
+
+.lock-message.visible {
+    display: block;
 }
